@@ -5,9 +5,11 @@
 
   <include package="plone.app.contentmenu" />
 
-  <!-- -*- extra stuff goes here -*- -->
+    <browser:resource
+	    name="rg-reservation.css"
+		file="rg-reservation.css"
+	    />
 
-    <!-- -*- PrenotazioniFolder -*- -->
     <browser:page
         for="..interfaces.IPrenotazioniFolder"
         name="view"
