@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<object name="portal_css">
+
+ <stylesheet title="" cacheable="True" compression="safe" cookable="True"
+    enabled="on" expression="" id="++resource++rg-reservation.css" media="all" rel="stylesheet"
+    rendering="import"/>
+</object>
