@@ -1,29 +1,12 @@
 <?xml version="1.0"?>
-    <object name="portal_skins"
-        allow_any="False"
-        cookie_persistence="False">
+    <object name="portal_skins">
 
-         <object name="rg_prenotazioni_custom_templates"
-            meta_type="Filesystem Directory View"
-            directory="rg.prenotazioni:skins/rg_prenotazioni_custom_templates"/>
          <object name="rg_prenotazioni_custom_scripts"
             meta_type="Filesystem Directory View"
             directory="rg.prenotazioni:skins/rg_prenotazioni_custom_scripts"/>
-         <object name="rg_prenotazioni_custom_styles"
-            meta_type="Filesystem Directory View"
-            directory="rg.prenotazioni:skins/rg_prenotazioni_custom_styles"/>
 
-        <skin-path name="*">
-            <layer name="rg_prenotazioni_custom_templates"
-                insert-after="custom"/>
-        </skin-path>
         <skin-path name="*">
             <layer name="rg_prenotazioni_custom_scripts"
                 insert-after="rg_prenotazioni_custom_templates"/>
         </skin-path>
-        <skin-path name="*">
-            <layer name="rg_prenotazioni_custom_styles"
-                insert-after="rg_prenotazioni_custom_scripts"/>
-        </skin-path>
-
 </object>
