@@ -3,14 +3,6 @@
     xmlns:cmf="http://namespaces.zope.org/cmf"
     i18n_domain="rg.prenotazioni">
 
-   <!-- File System Directory Views registration -->
-   <!--cmf:registerDirectory
-       name="rg_prenotazioni_custom_templates"/>
-   <cmf:registerDirectory
-       name="rg_prenotazioni_custom_scripts"/-->
-
-   <!-- Note: This could also be done for all folders at once
-        by replacing the previous lines with this one: -->
    <cmf:registerDirectory name="skins" directory="skins" recursive="True" />
 
 </configure>
