@@ -1,107 +1,0 @@
-/*
- *  This is the file where you put your CSS changes.
- *  You should preferrably use this and override the
- *  relevant properties you want to change here instead
- *  of customizing plone.css to survive upgrades. Writing
- *  your own plone.css only makes sense for very heavy
- *  customizations. Useful variables from Plone are
- *  documented at the bottom of this file.
- */
-
-/* <dtml-with base_properties> (do not remove this :) */
-/* <dtml-call "REQUEST.set('portal_url', portal_url())"> (not this either :) */
-
-
-/* DELETE THIS LINE AND PUT YOUR CUSTOM STUFF HERE */
-
-td.day {
-    vertical-align:top;
-    min-width:130px;
-}
-
-.slot {
-    width:120px;
-}
-
-td.selected {
-    background-color: #EEF3F5;
-}
-
-/* </dtml-with> */
-
-/* DOCUMENTATION ON PRE-DEFINED PROPERTIES FROM PLONE */
-
- /* You can insert colors and other variables from Plone's
-    base_properties by doing:
-
-    & dtml-variableName ; (without the spaces, excluded here to not make it render)
-
-    Example:
-
-    myLink {
-        color: & dtml-fontColor ;   (again, without the spaces)
-    }
-
-   This means you can generate your own elements that use Plone's defaults,
-   and respect any customizations people have done. See base_properties for
-   the default values.
-
-   These are the available properties:
-
-   logoName - the file name of the portal logo
-
-   fontFamily - the font family used for all text that is not headers
-
-   fontBaseSize - the base font size that everything is calculated from
-
-   fontColor - the main font color
-
-   fontSmallSize - used for various elements like buttons and discreet text
-
-   discreetColor - the font color of discreet text
-
-   backgroundColor - the background color
-
-   linkColor - the color used on normal links
-
-   linkActiveColor - color used on active links
-
-   linkVisitedColor - color used on visited links
-
-   borderWidth - the width of most borders in Plone
-
-   borderStyle - the style of the border lines, normally solid
-
-   borderStyleAnnotations - style of border lines on comments etc
-
-   globalBorderColor - the border color used on the main tabs, the portlets etc
-
-   globalBackgroundColor - background color for the selected tabs, portlet headings etc
-
-   globalFontColor - the color of the font in the tabs and in portlet headings
-
-   headingFontFamily - font family for h1/h2/h3/h4/h5/h6 headlines
-
-   contentViewBorderColor - the content view tabs border color
-
-   contentViewBackgroundColor - the content view tabs background color
-
-   contentViewFontColor - the font color used in the content view tabs
-
-   inputFontColor - the font color used for input elements
-
-   textTransform - whether to lowercase text in portlets, tabs etc.
-
-   evenRowBackgroundColor - the background color of even rows in listings
-
-   oddRowBackgroundColor - the background color of even rows in listings
-
-   notifyBorderColor - border color of notification elements like the status message, the calendar focus
-
-   notifyBackgroundColor - background color of notification elements like the status message, the calendar focus
-
-   helpBackgroundColor - background color of information pop-ups (currently not used)
-
- */
-
-
