@@ -1,3 +1,0 @@
-[default]
-title = Plone Custom CSS
-cache = HTTPCache
